# TarnakGameHub

./: BUILD_GUIDE.md  FINAL_CHECKLIST.md  PROJE_TAMAMLANDI.md  QUICKSTART.md
Tarnak GameHub/: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  README_TR.md  build_setup.bat
Tarnak GameHub/.github/ISSUE_TEMPLATE/: bug_report.md
Tarnak GameHub/.github/workflows/: build.yml
Tarnak GameHub/docs/: Building.md  README.md
Tarnak GameHub/include/: pch.h
Tarnak GameHub/include/core/: Application.h  HotkeyManager.h  Logger.h
Tarnak GameHub/installer/: setup.iss
Tarnak GameHub/resources/: app.ico.txt  app.manifest  app.rc
Tarnak GameHub/scripts/: AutoUpdater.lua  Configmanager [utils].lua  DLL-Injector [utils].lua  FreeGames-Monitor.lua  GOW-2018-TRAINER [mod].lua  KeyBinding-Script.lua  Link-resolver [utils].lua  MSFS-2020-FIX [mod].lua  Quitongamelaunch [utils].lua  Schedule-I-TRAINER [mod].lua  SettingsManager.lua  SystemOptimizer-Script.lua  TarnakHub-Initializer.lua  Translation-Helper.lua  file-extractor [utils].lua
Tarnak GameHub/src/: Main.cpp
Tarnak GameHub/src/core/: HotkeyManager.cpp
Tarnak GameHub/tests/: TestFramework.h
Tarnak GameHub/themes/: Blue.json  Dawn.json  Default.json  Discord-Dark.json  Discord-Light.json  Discord.json  Dusk.json  Flow.json  Lake.json  LessDepressingDefault.json  Light.json  MidnightCity.json  Neon Rider.json  RealMadrid.json  SeaWeed.json  Snow.json  Steam.json  gaussian.json
Tarnak GameHub/translations/: de-DE.json  el.json
